--- a/3rd/CMakeLists.txt
+++ b/3rd/CMakeLists.txt
@@ -1,15 +1,36 @@
 include(FetchContent)
 
+# libuv
+set(BUILD_SHARED OFF CACHE BOOL "" FORCE)
+set(BUILD_STATIC ON CACHE BOOL "" FORCE)
+set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(BUILD_UNITTEST OFF CACHE BOOL "" FORCE)
+set(WITH_PROTOCOL OFF CACHE BOOL "" FORCE)
+set(WITH_PROTOCOL OFF CACHE BOOL "" FORCE)
+
+# libssh2
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
+set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
+
 FetchContent_Declare(
     spdlog
-    GIT_REPOSITORY https://github.com/gabime/spdlog
-    GIT_TAG         v1.12.0
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/spdlog
 )
 FetchContent_Declare(
-    Catch2
-    GIT_REPOSITORY https://github.com/catchorg/Catch2
-    GIT_TAG         v3.4.0
+    libssh2
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libssh2
+)
+FetchContent_Declare(
+    libhv
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libhv
+)
+FetchContent_Declare(
+    catch2
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/catch2
 )
 
 FetchContent_MakeAvailable(spdlog)
-FetchContent_MakeAvailable(Catch2)
+FetchContent_MakeAvailable(libssh2)
+FetchContent_MakeAvailable(libhv)
+FetchContent_MakeAvailable(catch2)
