Impl for ssh connection

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,4 +33,5 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     $<$<BOOL:${HTTPLIB_IS_USING_OPENSSL}>:OpenSSL::Crypto>
     hv_static
     libssh2_static
+    atomic
     spdlog $<$<BOOL:${MINGW}>:ws2_32>)
